@@ -870,24 +870,6 @@ block|}
 decl_stmt|;
 name|concurrentClient
 operator|.
-name|setParser
-argument_list|(
-operator|new
-name|BinaryResponseParser
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|concurrentClient
-operator|.
-name|setRequestWriter
-argument_list|(
-operator|new
-name|BinaryRequestWriter
-argument_list|()
-argument_list|)
-expr_stmt|;
-name|concurrentClient
-operator|.
 name|setPollQueueTime
 argument_list|(
 literal|0
